# matcat

./: Cargo.toml  README.md
benches/: category.rs  matcat_bench.rs
src/: categories.rs  category_ranges.rs  lib.rs  main.rs  materials.rs  variants.rs
tests/: category_ranges.rs  category_validation.rs  matcat_tests.rs  props.rs
