[package]
name = "matcat"
version = "0.2.1"
edition = "2021"
description = "Material Categories & Variants — human-friendly layer on top of utomid chemistry."
license = "MIT"
repository = "https://github.com/JDPlumbing/matcat"
readme = "README.md"

[dependencies]
utomid-rs = "0.1"   # depends on your already published crate
once_cell = "1.19"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matcat_bench"
harness = false
